--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "thresholding"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,8 @@ name = "thresholding"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+ndarray = "0.15.6"
+numpy = "0.17.2"
 
 [dependencies.pyo3]
 version = "0.17.1"
